--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -12,21 +12,8 @@
 // Custom definitions may go here
 
 // Include common definitions from above.
-buildscript {
-    repositories {
-        mavenCentral()
-        maven {
-            url = 'https://www.matthewo.tech/maven/'
-        }
-    }
-    dependencies {
-        classpath 'org.team11260:fast-load-plugin:0.1.2'
-    }
-}
-
 apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
-apply plugin: 'org.team11260.fast-load-plugin'
 
 android {
     namespace = 'org.firstinspires.ftc.teamcode'
@@ -41,7 +28,7 @@ repositories {
         url = 'https://maven.brott.dev/'
     }
     maven {
-        url = 'https://www.matthewo.tech/maven/'
+        url = "https://repo.dairy.foundation/releases"
     }
 }
 
@@ -50,6 +37,5 @@ dependencies {
     implementation "com.acmerobotics.roadrunner:ftc:0.1.21"
     implementation "com.acmerobotics.roadrunner:core:1.0.1"
     implementation "com.acmerobotics.roadrunner:actions:1.0.1"
-    implementation "com.acmerobotics.dashboard:dashboard:0.4.16"
-    implementation 'org.team11260:fast-load:0.1.2'
+    implementation("com.acmerobotics.slothboard:dashboard:0.1.1+0.4.16")
 }
