--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -12,8 +12,21 @@
 // Custom definitions may go here
 
 // Include common definitions from above.
+buildscript {
+    repositories {
+        mavenCentral()
+        maven {
+            url "https://repo.dairy.foundation/releases"
+        }
+    }
+    dependencies {
+        classpath "dev.frozenmilk:Load:0.1.0"
+    }
+}
+
 apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
+apply plugin: 'dev.frozenmilk.sinister.sloth.load'
 
 android {
     namespace = 'org.firstinspires.ftc.teamcode'
@@ -30,6 +43,9 @@ repositories {
     maven {
         url = "https://repo.dairy.foundation/releases"
     }
+    maven {
+        url = "https://repo.dairy.foundation/snapshots"
+    }
 }
 
 dependencies {
@@ -37,5 +53,7 @@ dependencies {
     implementation "com.acmerobotics.roadrunner:ftc:0.1.21"
     implementation "com.acmerobotics.roadrunner:core:1.0.1"
     implementation "com.acmerobotics.roadrunner:actions:1.0.1"
+    implementation("dev.frozenmilk.dairy:Core:2.1.0")
     implementation("com.acmerobotics.slothboard:dashboard:0.1.1+0.4.16")
+    implementation("dev.frozenmilk.dairy:Pasteurized:1.0.0")
 }
