--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -50,9 +50,13 @@ repositories {
 
 dependencies {
     implementation project(':FtcRobotController')
-    implementation "com.acmerobotics.roadrunner:ftc:0.1.21"
+    implementation("com.acmerobotics.roadrunner:ftc:0.1.21"){
+        exclude group: "com.acmerobotics.dashboard"
+    }
     implementation "com.acmerobotics.roadrunner:core:1.0.1"
-    implementation "com.acmerobotics.roadrunner:actions:1.0.1"
+    implementation ("com.acmerobotics.roadrunner:actions:1.0.1"){
+        exclude group: "com.acmerobotics.dashboard"
+    }
     implementation("dev.frozenmilk.dairy:Core:2.1.0")
     implementation("com.acmerobotics.slothboard:dashboard:0.1.1+0.4.16")
     implementation("dev.frozenmilk.dairy:Pasteurized:1.0.0")
