--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -56,7 +56,6 @@ dependencies {
     implementation("com.acmerobotics.roadrunner:core:1.0.1"){
         exclude group: "com.acmerobotics.dashboard"
     }
-    implementation("dev.frozenmilk.dairy:Core:2.2.4")
+    implementation("dev.frozenmilk.sinister:Sloth:0.2.4")
     implementation("com.acmerobotics.slothboard:dashboard:0.2.4+0.4.17")
-    implementation("dev.frozenmilk.dairy:Pasteurized:1.0.0")
 }
